- Added : Option in System Preference to Select the Admin Panel Right Logo (real_therplima/marcan)
- Added : Option in System Preference to enable/disable the ImpressCMS Project drop down menu (real_therplima/marcan)
- Added : Option in System Preference to enable/disable shortcut icons for block editing on block titles (stranger)

- Improved : The pm form to use the selected editor. (real_therplima)
- Improved : XoopsTree::getNicePathFromId has new parameter, allowing specification of the separator between links (skenow)
- Improved : System admin page markup (skenow)
- Improved : Revamping the modules list in System Admin > Modules (mcdonald/real_therplima/davidl2/mrtheme)
- Improved : Added templates support for the blocks admin area and some icons to improve the userfriendly (real_therplima)
- Improved : Improve the System dropdown menu including subitems for the preferences (real_therplima)
- Improved : Smarty library (Updated to the lastest version 2.6.19) (real_therplima)
- Improved : The Block Positons feature was separeted from the blocks admin and added to system as a new system module (real_therplima)
- Improved : Added possibility to change current encoding while upgrading. (stranger)
- Improved : Libraries default encoding is now UTF-8. (stranger)
- Improved : New smartiy variables on themes for "google analytics code" and "google meta tag". (stranger)
- Improved : Changing fiih link (after upgrading) to a new place for updating system module, right after upgrading is done. (stranger)

- Changed : Moved the Smarty library from /class to /libraries. (nekro)
- Changed : Moved the PHPmailer library from /class to /libraries. (nekro)
- Changed : Textarea is now widely. Better to create blocks and editing of templates. (sato-san)
- Changed : Password encryption method from md5 to more secure SHA256 + 2 unique salt keys. (vaughan)
- Changed : PM-Popup size bigger. (sato-san)
- Changed : All instances of target="_blank" replaced with rel="external". (vaughan)
