@@ -127,10 +127,43 @@ class MyTextSanitizer
 	 **/
 	function makeClickable(&$text)
 	{
+			$config_handler =& xoops_gethandler('config');
+			$xoopsConfigPersona =& $config_handler->getConfigsByCat(XOOPS_CONF_PERSONA);
+        if ($xoopsConfigPersona['shorten_url'] == 1) {
+	$text = ' '.$text;
+
+	$patterns = array("/(^|[^]_a-z0-9-=\"'\/])([a-z]+?):\/\/([^, \r\n\"\(\)'<>]+)/i", "/(^|[^]_a-z0-9-=\"'\/])www\.([a-z0-9\-]+)\.([^, \r\n\"\(\)'<>]+)/i", "/(^|[^]_a-z0-9-=\"'\/])ftp\.([a-z0-9\-]+)\.([^, \r\n\"\(\)'<>]+)/i", "/(^|[^]_a-z0-9-=\"'\/:\.])([a-z0-9\-_\.]+?)@([^, \r\n\"\(\)'<>\[\]]+)/i");
+
+	$replacements = array("\\1<a href=\"\\2://\\3\" target=\"_blank\">\\2://\\3</a>", "\\1<a href=\"http://www.\\2.\\3\" target=\"_blank\">www.\\2.\\3</a>", "\\1<a href=\"ftp://ftp.\\2.\\3\" target=\"_blank\">ftp.\\2.\\3</a>", "\\1<a href=\"mailto:\\2@\\3\">\\2@\\3</a>");
+
+	$text = preg_replace($patterns, $replacements, $text);
+
+	$links = explode('<a', $text);
+	$countlinks = count($links);
+   for ($i = 0; $i < $countlinks; $i++)
+   {
+	$link = $links[$i];
+	$link = (preg_match('#(.*)(href=")#is', $link)) ? '<a' . $link : $link;
+	$begin = strpos($link, '>') + 1;
+	$end = strpos($link, '<', $begin);
+	$length = $end - $begin;
+	$urlname = substr($link, $begin, $length);
+
+	$maxlength = intval($xoopsConfigPersona['max_url_long']);
+	$cutlength = intval($xoopsConfigPersona['pre_chars_left']);
+	$endlength = -intval($xoopsConfigPersona['last_chars_left']);
+	$middleurl = " ... ";
+	$chunked = (strlen($urlname) > $maxlength && preg_match('#^(https://|http://|ftp://|www\.)#is', $urlname)) ? substr_replace($urlname, $middleurl, $cutlength, $endlength) : $urlname;
+	$text = str_replace('>' . $urlname . '<', '>' . $chunked . '<', $text); 
+   }
+	$text = substr($text, 1);
+	return($text);
+		}else{
 		$patterns = array("/(^|[^]_a-z0-9-=\"'\/])([a-z]+?):\/\/([^, \r\n\"\(\)'<>]+)/i", "/(^|[^]_a-z0-9-=\"'\/])www\.([a-z0-9\-]+)\.([^, \r\n\"\(\)'<>]+)/i", "/(^|[^]_a-z0-9-=\"'\/])ftp\.([a-z0-9\-]+)\.([^, \r\n\"\(\)'<>]+)/i", "/(^|[^]_a-z0-9-=\"'\/:\.])([a-z0-9\-_\.]+?)@([^, \r\n\"\(\)'<>\[\]]+)/i");
 		$replacements = array("\\1<a href=\"\\2://\\3\" target=\"_blank\">\\2://\\3</a>", "\\1<a href=\"http://www.\\2.\\3\" target=\"_blank\">www.\\2.\\3</a>", "\\1<a href=\"ftp://ftp.\\2.\\3\" target=\"_blank\">ftp.\\2.\\3</a>", "\\1<a href=\"mailto:\\2@\\3\">\\2@\\3</a>");
 		return preg_replace($patterns, $replacements, $text);
-	}
+		}
+			}
 
 	/**
 	 * Replace XoopsCodes with their equivalent HTML formatting
